# the-compass

./: .gitignore  .~lock.categoria.csv#  README.md  app.py  fsdfsdf.py  main.py  pyproject.toml  your_report.html
src/: antt_parser.py  contracts.py  railway_attributes.py  teste.py  tolls.py
src/ETL/: E_bitcoin.py  E_confidence.py  E_energy.py  E_future_interest.py  E_ipea.py  T_antt.py
src/ETL/E_meugov/: E_railways.py
src/ETL/bcb/: E_m2.py  T_m2.py
src/ETL/fecomercio/: E_fecomercio.py  T_confidence.py  T_fecomercio.py  pipeline_fecomercio.py
src/ETL/infomoney/: E_future_interest.py  E_infomoney.py  T_future_interest.py  T_infomoney.py  pipeline_infomoney.py
src/ETL/investidor_10/: E_bitcoin.py  T_bitcoin.py  pipeline_bitcoin.py
src/ETL/meugov/: E_antt.py  E_energy_fuels.py  E_meugov.py  T_antt.py  T_energy_fuels.py  pipeline_antt.py  pipeline_energy.py  pipeline_ferrovias.py  pipeline_fuels.py  pipeline_railways.py  pipeline_tolls.py
src/ETL/meugov_excel/: E_energy_fuels.py  E_fuels.py  T_energy_fuels.py
src/column_mapping/: antt.py
src/extractions/: m2.py
tests/: test_contracts.py
utils/: logger.py
