[project]
name = "the-compass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "ipeadatapy>=0.1.9",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.31.0",
]
